--- a/src/body.tex
+++ b/src/body.tex
@@ -7,7 +7,7 @@
 
 	\begin{tikzpicture}[remember picture, overlay]
 		\node [inner sep=0pt] at (current page.center) {#1}; % Background image
-		\node [anchor=center, inner sep=1.25cm, rectangle, fill=maincolor!20!white, fill opacity=0.3, text opacity=1, minimum height=\paperheight, minimum width=\paperwidth, text width=0.8\paperwidth] at (current page.center) {#2}; % Title highlight box with title(s) and author(s)
+		\node [anchor=center, inner sep=1.25cm, rectangle, text opacity=1, minimum height=\paperheight, minimum width=\paperwidth, text width=0.8\paperwidth] at (current page.center) {#2}; % Title highlight box with title(s) and author(s)
 	\end{tikzpicture}
 	
 	\newpage
