--- a/src/02-Torres.Rmd
+++ b/src/02-Torres.Rmd
@@ -1,4 +1,4 @@
-# Les Torres
+# Torres
 
 Definirem elements algebraics i transcendents i el polinomi mínim d'un element algebraic, amb exemples.
 Enunciarem i demostrarem la fórmula de les torres, i com es comporta el grau en composicions de cossos.
